# b39wc

./: Cargo.toml  README.md
resources/test/: test_dictionary.txt
src/: main.rs  models.rs  test.rs
src/dictionaries/: chinese_simplified.rs  chinese_traditional.rs  czech.rs  english.rs  french.rs  italian.rs  japanese.rs  korean.rs  mod.rs  portuguese.rs  spanish.rs
